# autoseguro-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.genie/wishes/agente-autoseguro/: WISH.md
.genie/wishes/fix-adversarial/: WISH.md
autoseguro/: __init__.py  agent.py  anthropic_extractor.py  cli.py  config.py  extraction.py  handoff.py  pii.py  quote_client.py  replay.py  tracing.py
docs/: execucao-falha-handoff.md  execucao-happy.md
docs/traces/: execucao-falha-handoff.trace.jsonl  execucao-happy.trace.jsonl
eval/: README.md  __init__.py  make_subset.py  run_eval.py  sample_30.txt  sample_300.txt  sample_80.txt  sample_repr_150.txt
tests/: test_agent.py  test_anthropic_extractor.py  test_cli.py  test_config.py  test_extraction.py  test_handoff.py  test_keyword_fuzzy.py  test_pii.py  test_quote_client.py  test_replay.py  test_resilience_policy.py  test_trace.py
tests/integration/: conftest.py  doubles.py  fake_quote.py  test_production_wiring.py  test_resilience_real_server.py
