[project]
name = "autoseguro-agent"
version = "0.1.0"
description = "Agente de vendas por WhatsApp da seguradora fictícia AutoSeguro (desafio FDE Namastex)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
